--- a/public/css/qaw-server.scss
+++ b/public/css/qaw-server.scss
@@ -519,13 +519,12 @@ body {
 
 #contentButton{
   width: 200px;
-  margin-left: 50px;
+  margin: 0 50px 25px 25px;
   horizontal-align: right;
   float:right;
   display: block;
-  margin-right: 25px;
-
 }
+
 .buttonAux{
     background: #345678;
 }
