--- a/public/css/qaw-server.scss
+++ b/public/css/qaw-server.scss
@@ -602,7 +602,7 @@ body {
     margin-right: 1.5em;
 }
 
-div#apk-output {
+div#app-output {
   height: 200px;
   width: 80%;
   font-size: 12px;
@@ -610,6 +610,11 @@ div#apk-output {
   overflow-y: scroll;
   overflow-x: hidden;
   display: none;
+
+  code {
+    word-wrap: break-word;
+    white-space: pre-line;  
+  }
 }
 
 div#app-install {
