--- a/public/css/qaw-server.css
+++ b/public/css/qaw-server.css
@@ -241,12 +241,15 @@ body {
 
 #step-1 {
   position: absolute;
-  width: 100%;
   background: none;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
+
+#step-1,
+#step-2 {
+  width: inherit; }
 
 #summary {
   font-size: 0.58333em;
