--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -31,6 +31,7 @@
   display: block;
   outline: none;
   width: 3%;
+  position: fixed;
   -webkit-border-top-right-radius: 5px;
   -webkit-border-bottom-right-radius: 5px;
   -moz-border-radius-topright: 5px;
@@ -39,7 +40,8 @@
   border-bottom-right-radius: 5px; }
 
 .use-sidebar #separator {
-  background: url("../images/vertical-separator.gif") repeat-y center top; }
+  background: url("../images/vertical-separator.gif") repeat-y center top;
+  position: relative; }
 
 #separator:hover {
   background: #B43E97; }
