--- a/public/css/qaw-server.scss
+++ b/public/css/qaw-server.scss
@@ -347,17 +347,16 @@ body {
 
 #step-1 {
   position: absolute;
-  //width: 100%;
+  width: 100%;
   background: none;
-
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
-#step-1,
-#step-2 {
+#content #step-1,
+#content #step-2 {
   width: inherit;
 }
 
