--- a/public/css/qaw-server.css
+++ b/public/css/qaw-server.css
@@ -122,6 +122,9 @@ body {
     color: rgba(255, 255, 255, 0.5); }
   .btn:focus {
     outline: 0; }
+  .btn:disabled {
+    background: #384044;
+    color: grey; }
 
 .primary {
   background: #B43E97;
