--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -28,6 +28,7 @@
 
 #separator {
   background-color: #EEE;
+  color: #B43E97;
   display: block;
   outline: none;
   width: 3%;
@@ -44,12 +45,12 @@
   position: relative; }
 
 #separator:hover {
-  background: #B43E97; }
+  background: #B43E97;
+  color: white; }
 
 span.configsidebar {
   transform: rotate(-90deg);
   display: inline-block;
-  margin: 50px 0 0 -16px;
-  color: #B43E97; }
+  margin: 50px 0 0 -16px; }
 
 /*---------*/
