Efecto al sidebar de Config

--- a/public/css/sidebar.scss
+++ b/public/css/sidebar.scss
@@ -2,7 +2,14 @@
 
 #sidebar {
     border-color: #BCD;
-    display: none;
+    width: 0;
+    -webkit-transition-duration: 1s;
+    -moz-transition-duration: 1s;
+    -o-transition-duration: 1s;
+    transition-duration: 1s;
+    & form {
+        display: none;
+    }
 }
 #content {
     border-color: #CDC;
@@ -11,7 +18,6 @@
  
 .use-sidebar #content {width: 64%;}
 .use-sidebar #sidebar {
-    display: block;
     width: 32%;
 }
  
